<resources>
    <string name="app_name">OpenEvents</string>
    <string name="start_button_text">Start</string>
    <string name="sign_in_string">Sign in</string>
    <string name="welcome_string">Welcome !</string>
    <string name="username_text_holder">Username</string>
    <string name="password_text_holder">Password</string>
    <string name="login_text">Log in</string>
    <string name="register_text">Register</string>
    <string name="sign_up_string">Sign up</string>
    <string name="get_started_string">Let\'s get started</string>
    <string name="email_text_holder">Email</string>
    <string name="last_name_text_holder">Last Name</string>
    <string name="confirm_password_text_holder">Confirm password</string>
    <string name="profile_string">Profile</string>
    <string name="logout_text">Log out</string>
    <string name="profile_name_string">Name:</string>
    <string name="default_profile_data">________________</string>
    <string name="profile_last_name_string">Last Name:</string>
    <string name="profile_email_string">Email:</string>
    <string name="profile_id_string">ID:</string>
    <string name="profile_username_string">Username:</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="welcome_menu_string">Welcome to OpenEvents</string>
    <string name="manage_own_events_text">My Events</string>
    <string name="social_text">Social</string>
    <string name="start_text">Start</string>
    <string name="create_event_text">Create event</string>
    <string name="edit_event_text">Edit event</string>
    <string name="delete_event_text">Delete event</string>
    <string name="view_events_text">View my events</string>
    <string name="create_string">Create</string>
    <string name="name_text_holder">Name</string>
    <string name="starting_date_text_holder">Starting Date (yyyy-MM-dd)</string>
    <string name="finishing_date_text_holder">Finishing Date (yyyy-MM-dd)</string>
    <string name="number_of_participants_text_holder">Number of participants</string>
    <string name="search_image_text">Search Image</string>
    <string name="edit_string">Edit</string>
    <string name="instructions_edit_string">Introduce the name of the event you want to modify:</string>
    <string name="edit_text">Edit</string>
    <string name="save_event_text">Save Event</string>
    <string name="event_settings_string">Event Settings</string>
    <string name="search_user_text">Search User</string>
    <string name="manage_friend_requests_text">Manage Friend Requests</string>
    <string name="friends_string">Friends</string>
    <string name="instructions_serch_string">Introduce the email of the user that you want to search:</string>
    <string name="user_profile_string">User Profile</string>
    <string name="send_friend_request_text">Send Friend Request</string>
    <string name="accept_string">Accept</string>
    <string name="decline_string">Decline</string>
    <string name="remove_string">Remove</string>
    <string name="default_user_string">#User1</string>
    <string name="my_events_string">My Events</string>
    <string name="location_string">Location</string>
    <string name="timeline_string">Timeline</string>
    <string name="default_event_string">#1 Event</string>
    <string name="profile_text">Profile</string>
    <string name="toast_empty">One or more empty inputs.</string>
    <string name="toast_error_password_match">Passwords don\'t match.</string>
    <string name="toast_api_error_register">Error at creating a new user.</string>
    <string name="toast_api_error_login">Error at login with this username and password.</string>
    <string name="toast_api_error">Error at connecting to API.</string>
    <string name="error_parsing_json_token">Error at parsing accessToken JSON.</string>
    <string name="error_parsing_json_id">Error at parsing id JSON.</string>
    <string name="error_parsing_json">Error at parsing JSON.</string>
    <string name="profile_avg_score">Avg Score:</string>
    <string name="profile_num_comm">Nº Comments:</string>
    <string name="profile_perct">% commenters:</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="image_edit_string">Image Link</string>
    <string name="edit_button_text">Edit</string>
    <string name="toast_api_error_edit">Error at trying to edit these parameters.</string>
    <string name="add_friend_string">Add friend</string>
    <string name="toast_error_user_exists">This email doesn\'t exist.</string>
    <string name="allevents_text">All Events</string>
    <string name="description_text_holder">Description</string>
    <string name="type_text_holder">Type</string>
    <string name="image_text_holder">Image</string>
    <string name="location_text_holder">Location</string>
    <string name="toast_date_error">Error at date format.</string>
    <string name="toast_integer_error">Error at integer format.</string>
    <string name="toast_api_error_create_event">Error at creating a new event.</string>
    <string name="toast_date_endstart">End Date is before than Start Date.</string>
    <string name="event_string">Event</string>
    <string name="number_of_participants_text">Nº Participants</string>
    <string name="remove_event_text">Remove</string>
    <string name="event_removed">The event has been removed.</string>
    <string name="edit_event_string">Edit Event</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_friend_ok">Sended friend request successfully.</string>
    <string name="error_friend_api">Couldn\'t add friend.</string>
    <string name="friend_request_text">Friend Requests</string>
    <string name="accept_fr">Friend request managed successfully.</string>
    <string name="chat_string">Chat</string>
    <string name="friends_text">Friends</string>
    <string name="message_text">Message</string>
    <string name="current_events_text">Current</string>
    <string name="category_string">Category</string>
    <string name="filters_string">Filters</string>
    <string name="popularity_string">Popular</string>
    <string name="event_name_text_holder">Event Name</string>
    <string name="date_text_holder">Date</string>
    <string name="delete_string">Delete</string>
    <string name="enroll_string">Enroll</string>
    <string name="enrolled_string">Enrolled</string>
    <string name="unenroll_string">Unenroll</string>
    <string name="rate_the_event_text">Rate the event:</string>
    <string name="comments_string">Comments</string>
    <string name="comments_opinion_text">Comments/Opinion</string>
    <string name="error_parsing_date">Error. Start Date or End Date is null.</string>
    <string name="post_text">Post</string>
    <string name="default_email_string">user1@gmail.com</string>
    <string name="default_comment">Lorem ipsum dolor sit amet.</string>
    <string name="comment_example">lorem ipsum dolor sit amet consectetur adipiscing elit</string>
    <string name="default_surname_string">surnameUser1</string>
    <string name="error_comment_empty">Error! The comment mustn\'t be empty</string>
    <string name="enrolled_events_string">Enrolled Events</string>
    <string name="enrolled_button_string">Enrolled Events</string>
    <string name="list_people_enrolled_event_string">List people enrolled:</string>
    <string name="error_parameters">Error at commenting.</string>
    <string name="put_comment_string">Add comment:</string>
    <string name="null_string">NULL</string>
</resources>